name:                functional-adventure
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/functional-adventure#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , random
                     , mtl
  exposed-modules:     Item
                     , Direction
                     , Room
                     , Player
                     , Initialize
                     , GameState
                     , Command
                     , GameIO

executable functional-adventure
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , random
                     , mtl
  other-modules:       Item
                     , Direction
                     , Room
                     , Player
                     , Initialize
                     , GameState
                     , Command
                     , GameIO